Some DB connections fixes

--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - ../data/db:/data/db
+      - ../../data/db:/data/db
   init-db:
     restart: on-failure
     build:
