--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -10,6 +10,8 @@ importlib-metadata==7.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+prometheus-client==0.19.0
+prometheus-flask-exporter==0.23.0
 pymongo==4.6.1
 PyMySQL==1.1.0
 pytz==2023.3.post1
